# google-gas-town

./: .gitignore  README.md  config.yaml  gastown.py  pyproject.toml  requirements.txt  setup.sh
.agent/workflows/: gastown.md
agent/: budget.py  cli.py  core.py  display.py  router.py  tools.py
agent/providers/: __init__.py  anthropic.py  base.py  google.py  openai.py
lib/: __init__.py  beads.py  brain.py  config.py  convoy.py  dashboard.py  glove.py  hooks.py  jules_wrapper.py  mayor.py  polecat.py  rig.py
scripts/: feed_tasks.sh  monitor_swarm.sh  spawn_polecat.sh
templates/: convoy_template.yaml  hook_context.md  jules_task.md
tmux/: gastown.tmux.conf
tmux/layouts/: default.yaml  swarm.yaml
